add note about github

--- a/gtk_style/stylesheets/screen.css
+++ b/gtk_style/stylesheets/screen.css
@@ -16,3 +16,8 @@ body #header {
 body #main {
   line-height: 1.5;
 }
+/* line 19, ../sass/screen.scss */
+body #main .note {
+  color: gray;
+  font-style: italic;
+}
