make smaller headings a bit darker

--- a/gtk_style/stylesheets/screen.css
+++ b/gtk_style/stylesheets/screen.css
@@ -24,7 +24,7 @@ body #main {
 }
 /* line 25, ../sass/screen.scss */
 body #main h4 {
-  color: gray;
+  color: #a9a9a9;
 }
 /* line 29, ../sass/screen.scss */
 body #main .note {
