--- a/gtk_style/sass/screen.scss
+++ b/gtk_style/sass/screen.scss
@@ -23,11 +23,11 @@ body{
   	line-height: 1.5;
 
   	h4{
-  		color: #a9a9a9;
+  		color: #4d4d4d;
   	}
 
   	.note{
-  		color: gray;
+  		color: #333333;
   		font-style: italic;
   	}
   	.example{
