--- a/gtk_style/stylesheets/screen.css
+++ b/gtk_style/stylesheets/screen.css
@@ -26,12 +26,16 @@ body #main {
 body #main h4 {
   color: #4d4d4d;
 }
-/* line 29, ../sass/screen.scss */
+/* line 28, ../sass/screen.scss */
+body #main img {
+  max-width: 30%;
+}
+/* line 32, ../sass/screen.scss */
 body #main .note {
   color: #333333;
   font-style: italic;
 }
-/* line 33, ../sass/screen.scss */
+/* line 36, ../sass/screen.scss */
 body #main .example {
   border-radius: 1em;
   font-size: 80%;
